--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/duartefood?createDataBaseIfNotExist
 spring.datasource.username=root
 spring.datasource.password=driven
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
