teste do service de cozinha foram criados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=driven
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
